# coupledDynamics

./: CMakeLists.txt  InputOutput.cpp  InputOutput.h  LICENSE.txt  Lattice2D.cu  Lattice2D.cuh  README.md  global.h  main.cu
python_tools/: database.py
